# Numen

./: .gitignore  ADVANCED_ALGORITHMS.md  CROSS_DOMAIN_GUIDE.md  Dockerfile  EDUCATION_BUSINESS_PLAN.md  GEMINI_FEEDBACK_RESPONSE.md  LICENSE  QUICKSTART.md  README.md  TERMINAL_DEMO_RESULTS.md  TRAINING_EXPLAINED.md  education_ui.py  index.html  launch_ui.py  numen.bat  numen.ps1  public_ui.py  pyproject.toml  requirements.txt  setup.py  simple_ui.py  student_ui.py  test_numen.py  web_app.py
examples/: basic_usage.py  run_api.py  test_ocr.py
numen/: __init__.py  app.py  cli.py
numen/algorithms/: __init__.py  async_self_consistency.py  educational_verifier.py  formal_logic_integration.py  iterative_refinement.py  process_reward_model.py  rule_constrained_decoding.py  self_consistency.py  tree_of_thoughts.py
numen/api/: __init__.py  schemas.py  server.py
numen/core/: __init__.py  engine.py  mcts.py  solver.py  verifier.py
numen/ocr/: simple_ocr.py
numen/solvers/: student_solver.py
numen/strategies/: __init__.py  cross_domain.py  cryptanalysis.py  neural_analysis.py  quantum_computing.py
numen/training/: __init__.py  data_pipeline.py  lean_code_trainer.py  model.py  ppo_trainer.py  train.py
numen/ui/: __init__.py  gradio_app.py  ocr.py  reasoning_formatter.py
numen/utils/: __init__.py  logging.py  math_helpers.py
tests/: __init__.py  test_solver.py  test_verifier.py
