[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numen"
version = "1.0.0"
description = "Math solver for everyone — Algebra to Calculus, Matrices, ODEs, Statistics, Graphing"
authors = [{ name = "rewired89", email = "sanchezleal1989@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "networkx>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0", "mypy>=1.4.0"]
ocr-full = ["pdf2image>=1.16.0", "opencv-python>=4.8.0"]
training = ["torch>=2.0.0", "transformers>=4.30.0", "accelerate>=0.20.0", "datasets>=2.14.0"]

[project.scripts]
numen = "numen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["numen*"]
